# stox

./: .fig.yaml  .gitignore  .omnifig.yml  README.md  Untitled.ipynb  algo-trading.ipynb  api_test.py  app-old.py  app.py  companies  correlations-map.ipynb  correlations.ipynb  dax.ipynb  download-results.yml  euro23-fe.ipynb  europe-gu.ipynb  europe-new-fela-2022.ipynb  europe-new-update.ipynb  europe-new.ipynb  europe-selection.ipynb  ew_etfs.py  extract-pdfs.ipynb  fidelity.ipynb  ib-api.ipynb  jun24-update.md  links.ipynb  n-strategy.ipynb  numbers.ipynb  requirements.txt  scratch.ipynb  selections.py  setup.cfg  strategy-figures.ipynb  strategy-holdings.ipynb  strategy.ipynb  strategy.py  yahoo_data.ipynb
assets/: euro-partners-matches.json  euro-partners.json  euro-stats-sep28.csv  euro-stats-sep9.csv  euro-stats-stoxx50.csv  euro-stats.csv  ibkr-company-matches.csv  raw_trbc_codes.txt  stocks.csv  stoxx50-oct9.json  stoxx50.csv  symbol-table.yml  symbol-table_backup.yml  symbols-tulip.yml  symbols.yml  trbc_codes.json  yahoo2ibkr-old.yml  yahoo2ibkr.yml  yahoo2ibkr_backup.yml
config/: app.yml  container.yml  debug.yaml  demo.yml  eur-tickers.yml  euro.yml  info.yaml  strategies.yaml
euro/: ib-api.ipynb  scratch2023.ipynb
notebooks/: add-symbols.ipynb  av-api.ipynb  euro-to-nyse.ipynb  features.ipynb  ib-api.ipynb  ib-portfolio.ipynb  old-smybols.ipynb  planning.ipynb  population.ipynb  prep-app.ipynb  read-dis.ipynb  scape-all.ipynb  scratch.ipynb  scratch2023.ipynb  smybols.ipynb  stoxx50.ipynb  trbc_codes.ipynb  verify_symbols.ipynb  view-symbol.ipynb  (+1 more)
(+674 files in other folders)
