[metadata]
name = stox
description = "Tools and Scripts for Analyzing Stock Market Data from Yahoo Finance and IBKR"
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3.9
version = attr: stox.__version__

[options]
packages = find:

[options.extras_require]
test = pytest
